# Dual_Head_LLM_COT_Evidence

./: LICENSE  README.md  pyproject.toml
configs/: dhrd_config.yaml  evidence_binding_config.yaml  example_small.yaml
data/: example_test.json  example_train.json
data/redsm5/: README.md  example_annotations.csv
scripts/: generate_rationales.py  inference_dhrd.py  prepare_redsm5.py  train_dhrd.py  train_evidence_binding.py
src/Project/SubProject/data/: dhrd_dataset.py  evidence_binding_dataset.py
src/Project/SubProject/engine/: dhrd_trainer.py
src/Project/SubProject/models/: dhrd_model.py
