[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dhrd"
version = "0.1.0"
description = "Dual-Head Reasoning Distillation: Improving Classifier Accuracy with Train-Time-Only Reasoning"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "DHRD Implementation" }]
keywords = ["ml", "mlflow", "transformers", "reasoning", "distillation", "chain-of-thought"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "mlflow>=2.8",
  "transformers>=4.40",
  "torch>=2.2",
  "numpy>=1.24",
  "tqdm>=4.65",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "datasets>=2.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.6",
  "black>=24.3",
  "mypy>=1.8",
]
api = [
  "openai>=1.0",
  "anthropic>=0.3",
]
optuna = [
  "optuna>=3.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
